Kubernetes/project/Sudent-app-s3-kub-back-kube-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: mariadb-db
spec: 
  replicas: 1
  selector:
      matchLabels:
        app: mariadb-db     # point to service file selector
  template:
    metadata:
      name: mariadb-db-pod     # point to statefulset file name
      labels:
        app: mariadb-db    # point to service file selector
    spec:
      containers:
        - name: mariadb-db-container      
          image: mariadb:latest      
          ports:
            - containerPort: 3306        # point to service file targetport
          volumeMounts:
            - name: mariadb-pvc-vol   
              mountPath: /var/lib/mysql  
      volumes:
        - name: mariadb-pvc-vol
          persistentVolumeClaim:
            claimName: mariadb-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
spec: 
  selector: 
    app: mariadb-db   # point to statefulset file app label
  ports:  
    - port: 3306
      targetPort: 3306
      protocol: TCP
  type: ClusterIP

---

#spring boot backend deployment file

apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-backend-app    # point to deployment file app label
  template:
    metadata:
      name: student-backend-app-pod
      labels:
        app: student-backend-app    # point to service file selector
    spec:
      containers: 
        - name: student-backend-app-container
          image: prashantchitale22/javab:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"


---
apiVersion: v1
kind: Service 
metadata:
  name: student-backend-svc
spec:
    selector:
      app: student-backend-app    # point to deployment file app label
    ports:
      - port: 8080
        targetPort: 8080
        protocol: TCP
    type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-backend-svc
                port:
                  number: 8080  
      host: a83ded0c8a952437b97bff393138d1f2-2118097490.ap-south-1.elb.amazonaws.com
---
